--- a/src/app/articulo/articulo.component.scss
+++ b/src/app/articulo/articulo.component.scss
@@ -1,2 +1,83 @@
+.imagen {
+  width: 100%;
+  position: relative;
+  background-image: repeating-linear-gradient(135deg, rgba(189,189,189,0.1) 0px, rgba(189,189,189,0.1) 2px,transparent 2px, transparent 4px),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+}
+.arrow {
+  display: none;
+  height: 48px;
+  width: 48px;
+  position: absolute;
+  top: calc(50% - 24px);
+  border-radius: 50%;
+  background-color: rgba(22, 24, 35, 0.34);
+  color: white;
+  cursor: pointer;
+  z-index: 99;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -webkit-touch-callout : none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  /* -webkit-animation: arrows 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+  animation: arrows 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both; */
+}
+.imagen:hover .arrow {
+  display: block;
+ /*  -webkit-animation: arrow 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: arrow 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both; */
+}
 
 
+/*  @-webkit-keyframes arrow {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes arrow {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+
+@-webkit-keyframes arrows {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 1;
+  }
+}
+@keyframes arrows {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 1;
+  }
+}
+ */
