--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -14,7 +14,7 @@
       </button>
 
       <img
-        src="assets/img/logo.svg"
+        src="assets/img/logo.png"
         alt=""
         height="40px"
         style="cursor: pointer"
