--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,6 +30,7 @@
     </div>
     <app-carousel
       #carousel
+      [esArticulo]="true"
       [images]="imagenes"
       [height]="500"
       objectFit="contain"
