--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,6 @@ a {
 }
 
 .dialog {
-
   max-width: 100vw;
   min-width: 100vw;
   min-height: calc(100vh);
@@ -57,6 +56,9 @@ a {
 }
 .dialog .mat-dialog-container {
   border-radius: 0px;
+  padding: 0;
+  margin: 0;
+
 }
 .dialog-backdrop {
   background-color: transparent;
