show articulos update

--- a/src/app/admin/articulos/articulos.component.html
+++ b/src/app/admin/articulos/articulos.component.html
@@ -7,7 +7,7 @@
   "
   fxLayoutAlign="center"
 >
-  <div style="margin-top: 20px;" fxFlex="1300px" >
+  <div style="margin-top: 20px" fxFlex="1300px">
     <span class="mat-h1">Articulos</span>
     <mat-form-field appearance="fill">
       <mat-label>Buscar</mat-label>
@@ -19,11 +19,11 @@
       />
     </mat-form-field>
 
-    <div style="margin-top: 9px;">
+    <div style="margin-top: 9px">
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
         <!-- ID Column -->
         <ng-container matColumnDef="articulo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header >Artículo</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Artículo</th>
           <td mat-cell *matCellDef="let row">{{ row.articulo }}</td>
         </ng-container>
 
@@ -71,42 +71,128 @@
                     alt=""
                     height="100%"
                   />
-                  <div
-                    fxFlex="1 1 auto"
-                    style="height: 100%"
-                    fxLayout="column"
-                  >
+                  <div fxFlex="1 1 auto" style="height: 100%" fxLayout="column">
                     <div style="width: 100%" fxFlex="1 1 auto">
-                      <span class="mat-h2"> {{ element.categoria}}</span
-                      ><br />
-                      <span class="mat-h2"> {{ element.subcategoria }}</span
-                      ><br />
-                      <span class="mat-h2"> {{ element.marca }}</span>
+                      <div fxLayout="row wrap" fxFlexAlign="center center" fxLayoutGap="8px"
+                        >
+                        <button mat-mini-fab color="accent" (click)="
+                        openBottomSheet('edit-articulo', element.id_articulo, element.index)">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                        <p class="mat-body" style="padding-top: 5px;">ARTÍCULO: <span class="mat-body-strong">{{ element.articulo }}</span></p>
+
+
+                        </div>
+                        <div fxLayout="row wrap" fxFlexAlign="center center" fxLayoutGap="8px"
+                        >
+                        <button mat-mini-fab color="accent" (click)="
+                        openBottomSheet('edit-precio', element.id_articulo, element.index)">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                        <p class="mat-body" style="padding-top: 5px;">PRECIO: <span class="mat-body-strong">{{ element.precio | formatoMoneda }}</span></p>
+
+
+                        </div>
+                        <div fxLayout="row wrap" fxFlexAlign="center center" fxLayoutGap="8px"
+                        >
+                        <button mat-mini-fab color="accent" (click)="
+                        openBottomSheet('edit-stock', element.id_articulo, element.index)">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                        <p class="mat-body" style="padding-top: 5px;">CANTIDAD: <span class="mat-body-strong">{{ element.stock }}</span></p>
+
+
+                        </div>
+                        <div fxLayout="row wrap" fxFlexAlign="center center" fxLayoutGap="8px"
+                        >
+                        <button mat-mini-fab color="accent" (click)="
+                        openBottomSheet('edit-descuento', element.id_articulo, element.index)">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                        <p class="mat-body" style="padding-top: 5px;">DESCUENTO: <span class="mat-body-strong">{{ element.descuento ? element.descuento + "%" : "" }}</span></p>
+
+
+                        </div>
+                        <div fxLayout="row wrap" fxFlexAlign="center center" fxLayoutGap="8px"
+                        >
+                        <button mat-mini-fab color="accent" (click)="
+                        openBottomSheet('edit-marca', element.id_articulo, element.index)">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                        <p class="mat-body" style="padding-top: 5px;">MARCA: <span class="mat-body-strong">{{ element.marca }}</span></p>
+
+
+                        </div>
+                        <div fxLayout="row wrap" fxFlexAlign="center center" fxLayoutGap="8px"
+                        >
+                        <button mat-mini-fab color="accent" (click)="
+                        openBottomSheet('edit-categoria', element.id_articulo, element.index)">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                        <p class="mat-body" style="padding-top: 5px;">CATEGORÍA: <span class="mat-body-strong">{{ element.categoria }}</span></p>
+
+
+                        </div>
+                        <div fxLayout="row wrap" fxFlexAlign="center center" fxLayoutGap="8px"
+                        >
+                        <button mat-mini-fab color="accent" (click)="
+                        openBottomSheet('edit-subcategoria', element.id_articulo, element.index)">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                        <p class="mat-body" style="padding-top: 5px;">SUBCATEGORÍA: <span class="mat-body-strong">{{ element.subcategoria }}</span></p>
+
+
+                        </div>
                     </div>
                     <div style="width: 100%">
                       <p class="mat-small" style="text-align: end">
                         Publicado: {{ element.fecha_creacion | formatoFecha }}
                       </p>
                     </div>
-                    <div style="width: 100%;">
-                      <mat-divider style="width: 100%;"></mat-divider>
+                    <div style="width: 100%">
+                      <mat-divider style="width: 100%"></mat-divider>
 
-                      <div class="bottom-buttons" fxLayoutAlign="end center" fxLayoutGap="10px">
+                      <div
+                        class="bottom-buttons"
+                        fxLayoutAlign="end center"
+                        fxLayoutGap="10px"
+                      >
                         <button mat-mini-fab color="warn">
                           <mat-icon>delete</mat-icon>
                         </button>
-                        <button mat-mini-fab color="primary" (click)="openBottomSheet('descripcion', element.id_articulo)">
+                        <button
+                          mat-mini-fab
+                          color="primary"
+                          (click)="
+                            openBottomSheet('descripcion', element.id_articulo, element.index)
+                          "
+                        >
                           <mat-icon>notes</mat-icon>
                         </button>
-                        <button mat-mini-fab color="primary" (click)="openBottomSheet('imagenes', element.id_articulo)">
+                        <button
+                          mat-mini-fab
+                          color="primary"
+                          (click)="
+                            openBottomSheet('imagenes', element.id_articulo, element.index)
+                          "
+                        >
                           <mat-icon>collections</mat-icon>
                         </button>
-                        <button mat-mini-fab color="accent" [matMenuTriggerFor]="menu" (click)="updateSelectedArticuloId(element.id_articulo, element.index)">
+                        <!-- <button
+                          mat-mini-fab
+                          color="accent"
+                          [matMenuTriggerFor]="menu"
+                          (click)="
+                            updateSelectedArticuloId(
+                              element.id_articulo,
+                              element.index
+                            )
+                          "
+                        >
                           <mat-icon>more_vert</mat-icon>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
-
                   </div>
                 </div>
               </div>
@@ -136,48 +222,76 @@
       </table>
 
       <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
+        [pageSizeOptions]="[5, 10, 25, 50, 100]"
         showFirstLastButtons
+        pageSize="50"
       ></mat-paginator>
     </div>
   </div>
 </div>
 
-<mat-menu #menu="matMenu">
-  <button mat-menu-item (click)="openBottomSheet('edit-articulo', selectedIdArticulo)">
+<!-- <mat-menu #menu="matMenu">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-articulo', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Nombre del Artículo</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-descripcion', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-descripcion', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Descripción</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-precio', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-precio', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Precio</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-stock', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-stock', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Cantidad Disponibles</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-categoria', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-categoria', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Categoría</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-subcategoria', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-subcategoria', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Subcategoría</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-marca', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-marca', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Marca</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-imagenes', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-imagenes', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Imagenes</span>
   </button>
-  <button mat-menu-item (click)="openBottomSheet('edit-descuento', selectedIdArticulo)">
+  <button
+    mat-menu-item
+    (click)="openBottomSheet('edit-descuento', selectedIdArticulo)"
+  >
     <mat-icon>edit</mat-icon>
     <span>Descuento</span>
   </button>
-</mat-menu>
+</mat-menu> -->
