--- a/src/app/admin/articulos/articulos.component.scss
+++ b/src/app/admin/articulos/articulos.component.scss
@@ -36,8 +36,9 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 .img-container {
-  height: 200px;
+  height: 380px;
   width: 100%;
+  overflow-y: auto;
 }
 
 .example-element-symbol {
@@ -50,6 +51,14 @@ tr.example-element-row:not(.example-expanded-row):active {
   width: 100%;
   height: 50px;
   margin-left: -10px;
+}
+
+.mat-mini-fab {
+  height: 30px;
+  width: 30px;
+}
+mat-icon {
+  font-size: 1rem;
 }
 
 /* .example-element-description-attribution {
